# url2md

./: Cargo.toml  Dockerfile  LICENSE  README.md  justfile
.github/workflows/: _ci.yml  ci.yml  crates-publish.yml  docker-publish.yml  release.yml
docs/: REFERENCE.md
src/: error.rs  main.rs
