[package]
name = "url2md"
version = "1.0.0"
edition = "2024"
description = "CLI tool that fetches a URL and converts its HTML content to Markdown"
license = "MIT"
repository = "https://github.com/locci-cloud/url2md"
keywords = ["html", "markdown", "cli", "converter"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
htmd = "0.5.0"
thiserror = "2.0.18"

[profile.release]
strip = true        # remove debug symbols
opt-level = "z"     # optimize for binary size
lto = true          # link-time optimization
codegen-units = 1   # single codegen unit for better optimization
