[package]
name = "url2md"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
htmd = "0.5.0"
thiserror = "2.0.18"

[profile.release]
strip = true        # remove debug symbols
opt-level = "z"     # optimize for binary size
lto = true          # link-time optimization
codegen-units = 1   # single codegen unit for better optimization
